Kelsey Development Sandbox/src/objects/DS_Functioning_Forms_F__c.object
<CustomObject>
    <fields>
        <fullName>FCSERVICE__c</fullName>
        <description>2. Is the consumer still receiving services from your project?</description>
        <label>FCSERVICE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FDDATE__c</fullName>
        <description>1. On what date was the consumer discharged?</description>
        <label>FDDATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDEVEL__c</fullName>
        <description>11. Developmental Concerns</description>
        <label>FDEVEL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FDMICOG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Mild Developmental Concerns-Cognitive</description>
        <label>FDMICOG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDMIEXP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Mild Developmental Concerns-Expressive Language</description>
        <label>FDMIEXP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDMIMOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Mild Developmental Concerns-Motor</description>
        <label>FDMIMOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDMIREC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Mild Developmental Concerns-Receptive Language</description>
        <label>FDMIREC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDMISOC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Mild Developmental Concerns-Social</description>
        <label>FDMISOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDMOCOG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Moderate Developmental Concerns-Cognitive</description>
        <label>FDMOCOG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDMOEXP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Moderate Developmental Concerns-Expressive Language</description>
        <label>FDMOEXP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDMOMOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Moderate Developmental Concerns-Motor</description>
        <label>FDMOMOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDMOREC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Moderate Developmental Concerns-Receptive Language</description>
        <label>FDMOREC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDMOSOC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Moderate Developmental Concerns-Social</description>
        <label>FDMOSOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDOV__c</fullName>
        <formula>Background_ID__r.FDOV__c</formula>
        <label>FDOV</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FDSCESSTR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. What is the consumer&apos;s discharge status? = Mutually agreed cessation of treatment</description>
        <label>FDSCESSTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSDEATH__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. What is the consumer&apos;s discharge status? = Death</description>
        <label>FDSDEATH</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSECOG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Severe Developmental Concerns-Cognitive</description>
        <label>FDSECOG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSEEXP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Severe Developmental Concerns-Expressive Language</description>
        <label>FDSEEXP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSEMOT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Severe Developmental Concerns-Motor</description>
        <label>FDSEMOT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSEREC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Severe Developmental Concerns-Receptive Language</description>
        <label>FDSEREC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSESOC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>11. Severe Developmental Concerns-Social</description>
        <label>FDSESOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSNOCONT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. What is the consumer&apos;s discharge status? = No contact within 90 days of last encounter</description>
        <label>FDSNOCONT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSOTHER__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. What is the consumer&apos;s discharge status? = Other</description>
        <label>FDSOTHER</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSOTHSP__c</fullName>
        <description>2. What is the consumer&apos;s discharge status? = Other, please specify</description>
        <label>FDSOTHSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FDSREFOUT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. What is the consumer&apos;s discharge status? = Clinically referred out</description>
        <label>FDSREFOUT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FDSREFTR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. What is the consumer&apos;s discharge status? =  Withdrew from/ refused treatment</description>
        <label>FDSREFTR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FEDSERV__c</fullName>
        <description>6. Support Services = Education services</description>
        <label>FEDSERV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FEMPSERV__c</fullName>
        <description>2. Support Services = Employment services</description>
        <label>FEMPSERV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FEMREG__c</fullName>
        <description>2. Emotional Regulation</description>
        <label>FEMREG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FFAMSERV__c</fullName>
        <description>3. Support Services = Family services</description>
        <label>FFAMSERV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FFAPGAR1__c</fullName>
        <description>1. I am satisfied that I can turn to my family for help when something is troubling me.</description>
        <label>FFAPGAR1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FFAPGAR2__c</fullName>
        <description>2. I am satisfied with the way my family talks over things with me and shares problems with me.</description>
        <label>FFAPGAR2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FFAPGAR3__c</fullName>
        <description>3. I am satisfied that my family accepts and supports my wishes to take on new activities or directions.</description>
        <label>FFAPGAR3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FFAPGAR_MET__c</fullName>
        <label>FFAPGAR_MET</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FFAPGAR_RAW__c</fullName>
        <description>Raw score for fapgar questions 1-5.</description>
        <label>FFAPGAR_RAW</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FFEEDING__c</fullName>
        <description>3. Feeding</description>
        <label>FFEEDING</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHIVTEST__c</fullName>
        <description>10. Support Services = HIV testing</description>
        <label>FHIVTEST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FHOUSUPP__c</fullName>
        <description>7. Support Services = Housing support</description>
        <label>FHOUSUPP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FIMRISK__c</fullName>
        <description>1. Immediate Risk</description>
        <label>FIMRISK</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPACAD__c</fullName>
        <description>1. Academic problems (e.g., Problems with school work or grades)</description>
        <label>FISPACAD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPALC__c</fullName>
        <description>8. Alcohol use (e.g., Use of alcohol)</description>
        <label>FISPALC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPATT__c</fullName>
        <description>10. Attachment problems (e.g., Difficulty forming and maintaining trusting relationships with other people)</description>
        <label>FISPATT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPBEHH__c</fullName>
        <description>4. Behavior problems at home or community (e.g., Violent or aggressive behavior; breaking rules, fighting, destroying property, or other dangerous or illegal behavior)</description>
        <label>FISPBEHH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPBEHS__c</fullName>
        <description>2. Behavior problems in school or daycare (e.g., Getting into trouble, detention, suspension, expulsion)</description>
        <label>FISPBEHS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPCRIM__c</fullName>
        <description>11. Criminal activity (e.g., Activities that have resulted in being stopped by the police or arrested)</description>
        <label>FISPCRIM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPCRRU__c</fullName>
        <description>18. In the past 30 days, how many times have you been arrested?</description>
        <label>FISPCRRU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPCRSP__c</fullName>
        <description>18. In the past 30 days, how many times have you been arrested? Specified</description>
        <label>FISPCRSP</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FISPCSA__c</fullName>
        <description>13. Commercial sexual exploitation (e.g., Exchanging sex for money, drugs or other resources, prostitution)</description>
        <label>FISPCSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPDISA__c</fullName>
        <description>15. Child has other medical problems or disabilities (e.g., Chronic or recurrent condition that affects the child&apos;s ability to function)</description>
        <label>FISPDISA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPED__c</fullName>
        <description>14. Child has shown signs of an eating disorder (Anorexia, Binge
eating, and/or Bulimia)</description>
        <label>FISPED</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPRUN__c</fullName>
        <description>12. Running away from home (e.g., Staying away for at least one night)</description>
        <label>FISPRUN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPSA__c</fullName>
        <description>9. Substance abuse (e.g., Use of illicit drugs or misuse of prescription medication)</description>
        <label>FISPSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPSINJ__c</fullName>
        <description>6. Other self-injurious behaviors (e.g., Cutting himself/herself, pulling out his/her hair)</description>
        <label>FISPSINJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPSKPS__c</fullName>
        <description>3. Problems with skipping school or daycare (e.g., Where he/she skipped at least 4 days in the past month, or skipped parts of the day on at least half of the school days)</description>
        <label>FISPSKPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPSUIC__c</fullName>
        <description>5. Suicidality (e.g., Thinking about killing himself/herself or attempting to do so)</description>
        <label>FISPSUIC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FISPSXBE__c</fullName>
        <description>7. Developmentally inappropriate sexualized behaviors (e.g., Saying or doing things about sex that children his/her age do not usually know)</description>
        <label>FISPSXBE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMEDCARE__c</fullName>
        <description>1. Support Services = Medical care</description>
        <label>FMEDCARE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMENHLTH__c</fullName>
        <description>5. Identify all of the services your project provided to the consumer since his/her last NOMs interview; this includes CMHS-funded and non-funded services. = Mental Health Services</description>
        <label>FMENHLTH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FMHS__c</fullName>
        <description>2. If the answer to 5, &apos;Mental Health Services,&apos; is &quot;Yes,&quot; please estimate how frequently mental health services were delivered: Day, Week, Month, Year, or Unknown</description>
        <label>FMHS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNADMINOSP__c</fullName>
        <description>2. Indicate who administered question 1 above: Other, specified</description>
        <label>FNADMINOSP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FNADMIN__c</fullName>
        <description>2. Indicate who administered Question 1 above</description>
        <label>FNADMIN</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNALCOHOL__c</fullName>
        <description>3b. In the past 30 days, how often have you used Alcohol</description>
        <label>FNALCOHOL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNCANNABIS__c</fullName>
        <description>3c. In the past 30 days, how often have you used Cannabis</description>
        <label>FNCANNABIS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNCCTSBSLC__c</fullName>
        <description>2. Is this breakthrough series or learning collaborative lead by the UCLA-Duke University National Center for Child Traumatic Stress?</description>
        <label>FNCCTSBSLC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FNCOCAINE__c</fullName>
        <description>3d. In the past 30 days, how often have you used Cocaine</description>
        <label>FNCOCAINE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>96</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>